create nav in html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Pretty Products</title>
+    <meta name="viewport" content="width=device-width,initia-scale=1">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="">
   </head>
   <body>
+    <main role="main">
+      <ul>
+        <li class="crystal">
+          <img class="products" src="images/crystal.svg" alt="Crystal">
+          <h2>Crystal</h2>
+          <p>Shiny, glowy and make great sounds.</p>
+          <div class="nav">
+            <a class="cart" href="#" aria-label="Add crystal to cart"></a>
+          <img class="add-to-cart" src="images/cart.svg" alt="Add to cart">
+            <a href="#" aria-label="Favourite Crystals"></a>
+          <img class="fav" src="images/favourite.svg" alt="Favourite crystals">
+            <a href="#" aria-label="Share Crystals"></a>
+          <img class="share" src="images/share.svg" alt="Share">
+          </div>
+        </li>
+        <li class="diamond">
+          <img class="products" src="images/diamond.svg" alt="Diamond">
+          <h2>Diamond</h2>
+          <p>Diamonds sparkle in all shapes, sizes and clarities.</p>
+          <div class="nav">
+            <a class="cart" href="#" aria-label="Add diamond to cart"></a>
+          <img class="add-to-cart" src="images/cart.svg" alt="Add to cart">
+            <a href="#" aria-label="Favourite Diamonds"></a>
+          <img class="fav" src="images/favourite.svg" alt="Favourite diamonds">
+            <a href="#" aria-label="Share Diamond"></a>
+          <img class="share" src="images/share.svg" alt="Share">
+          </div>
+        </li>
+
 
   </body>
 </html>
