finish typing html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img class="add-to-cart" src="images/cart.svg" alt="Add to cart">
             <a href="#" aria-label="Favourite Crystals"></a>
           <img class="fav" src="images/favourite.svg" alt="Favourite crystals">
-            <a href="#" aria-label="Share Crystals"></a>
+            <a href="#" aria-label="Share Crystal"></a>
           <img class="share" src="images/share.svg" alt="Share">
           </div>
         </li>
@@ -37,7 +37,85 @@
           <img class="share" src="images/share.svg" alt="Share">
           </div>
         </li>
-
-
+        <li class="gem">
+          <img class="products" src="images/gem.svg" alt="Gems">
+          <h2>Gem</h2>
+          <p>Lots of bright, wonderful colours-and shapes.</p>
+          <div class="nav">
+            <a class="cart" href="#" aria-label="Add gem to cart"></a>
+          <img class="add-to-cart" src="images/cart.svg" alt="Add to cart">
+            <a href="#" aria-label="Favourite Gems"></a>
+          <img class="fav" src="images/favourite.svg" alt="Favourite gems">
+            <a href="#" aria-label="Share Gems"></a>
+          <img class="share" src="images/share.svg" alt="Share">
+          </div>
+        </li>
+        <li class="jewel">
+          <img class="products" src="images/jewel.svg" alt="Jewel">
+          <h2>Jewel</h2>
+          <p>The root word of jewellery, so ya know it's gorg'</p>
+          <div class="nav">
+            <a class="cart" href="#" aria-label="Add jewel to cart"></a>
+          <img class="add-to-cart" src="images/cart.svg" alt="Add to cart">
+            <a href="#" aria-label="Favourite Jewels"></a>
+          <img class="fav" src="images/favourite.svg" alt="Favourite jewels">
+            <a href="#" aria-label="Share Jewel"></a>
+          <img class="share" src="images/share.svg" alt="Share">
+          </div>
+        </li>
+        <li class="pearl">
+          <img class="products" src="images/pearl.svg" alt="Pearl">
+          <h2>Pearl</h2>
+          <p>Beautifly pearlescent circles created inside living creatures.</p>
+          <div class="nav">
+            <a class="cart" href="#" aria-label="Add pearl to cart"></a>
+          <img class="add-to-cart" src="images/cart.svg" alt="Add to cart">
+            <a href="#" aria-label="Favourite Pearls"></a>
+          <img class="fav" src="images/favourite.svg" alt="Favourite pearls">
+            <a href="#" aria-label="Share Pearl"></a>
+          <img class="share" src="images/share.svg" alt="Share">
+          </div>
+        </li>
+        <li class="rock">
+          <img class="products" src="images/rock.svg" alt="Rock">
+          <h2>Rock</h2>
+          <p>Who doesn’t love a good, plain, ol’ rock now & then.</p>
+          <div class="nav">
+            <a class="cart" href="#" aria-label="Add rock to cart"></a>
+          <img class="add-to-cart" src="images/cart.svg" alt="Add to cart">
+            <a href="#" aria-label="Favourite Rocks"></a>
+          <img class="fav" src="images/favourite.svg" alt="Favourite rocks">
+            <a href="#" aria-label="Share Rock"></a>
+          <img class="share" src="images/share.svg" alt="Share">
+          </div>
+        </li>
+        <li class="ruby">
+          <img class="products" src="images/ruby.svg" alt="Ruby">
+          <h2>Ruby</h2>
+          <p>If you love dazzling red—this is the one!</p>
+          <div class="nav">
+            <a class="cart" href="#" aria-label="Add ruby to cart"></a>
+          <img class="add-to-cart" src="images/cart.svg" alt="Add to cart">
+            <a href="#" aria-label="Favourite Rubies"></a>
+          <img class="fav" src="images/favourite.svg" alt="Favourite rubies">
+            <a href="#" aria-label="Share Ruby"></a>
+          <img class="share" src="images/share.svg" alt="Share">
+          </div>
+        </li>
+        <li class="sapphire">
+          <img class="products" src="images/sapphire.svg" alt="Sapphire">
+          <h2>Sapphire</h2>
+          <p>Blue for you. Blue is blue. Yay, blue.</p>
+          <div class="nav">
+            <a class="cart" href="#" aria-label="Add diamond to cart"></a>
+          <img class="add-to-cart" src="images/cart.svg" alt="Add to cart">
+            <a href="#" aria-label="Favourite Sapphires"></a>
+          <img class="fav" src="images/favourite.svg" alt="Favourite sapphires">
+            <a href="#" aria-label="Share Sapphire"></a>
+          <img class="share" src="images/share.svg" alt="Share">
+          </div>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
